fix overflow page-dialog-search-advance

--- a/src/assets/stylesheets/sites/dialog.scss
+++ b/src/assets/stylesheets/sites/dialog.scss
@@ -12,7 +12,6 @@
 
 	&.show {
 		right: 0;
-		background-color: var(--background);
 	}
 
 }
